@@ -1,6 +1,19 @@
 LIBDI_4.1 {
   global:
-    di_*;
+    di_list_alloc;
+    di_list_append;
+    di_list_append_chunk;
+    di_list_destroy;
+    di_list_free;
+    di_list_prepend;
+    di_list_prepend_chunk;
+    di_release_alloc;
+    di_release_free;
+    di_release_parser_fieldinfo;
+    di_release_parser_read_file;
+    di_release_read_file;
+  local:
+    *;
 };
 
 #LIBDI_PRIVATE {
